# rust_course

./: .env  .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: handlers.rs  lib.rs  main.rs
tests/: integration.rs
